# kg-builder

./: .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: basic.yml  basic_wf.yml
.github/workflws/: basic.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
src/: api.py  utils.py
src/app/: api.py  config.py  utils.py
src/app/db/: neo4j.py
src/app/doc/: parser.py
src/app/lm/: agents.py  models.py  setup.py  signatures.py
src/db/: neo4j.py
src/doc/: parser.py
src/lm/: agents.py  config.py  models.py  signatures.py
tests/: test_api.py
