[project]
name = "kg-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.1",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "langfuse>=3.3.0",
    "llama-cloud-services>=0.6.62",
    "neo4j>=5.28.2",
    "openinference-instrumentation-dspy>=0.1.28",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.9",
    "uvicorn>=0.35.0",
]
