[project]
name = "kg-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.1",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "langfuse>=3.3.0",
    "llama-cloud-services>=0.6.62",
    "neo4j>=5.28.2",
    "openinference-instrumentation-dspy>=0.1.28",
    "opentelemetry-distro>=0.58b0",
    "opentelemetry-exporter-jaeger>=1.11.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    # Common auto-instrumentations for web + IO
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-starlette>=0.58b0",
    "opentelemetry-instrumentation-asgi>=0.58b0",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-instrumentation-redis>=0.58b0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "nltk>=3.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["kg-builder-scaled"]
force-sort-within-sections = true


[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
